acomodando errores de boton y agregando marca y modelo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ if (error) {
 ---
 
 <Layout>
-	<main class="relative h-screen w-full max-w-xl mx-auto bg-black overflow-hidden font-display">
+	<main class="relative h-dvh w-full max-w-xl mx-auto bg-black overflow-hidden font-display">
 
 		{/* Immersive Scroll Container */}
 
