--- a/src/components/CardProduct.astro
+++ b/src/components/CardProduct.astro
@@ -22,17 +22,27 @@ const waLink = `https://wa.me/?text=${waMessage}`;
         />
         <div class="absolute inset-0 bg-linear-to-t from-black/80 via-black/20 to-transparent"></div>
     </picture>
-    <div class="absolute bottom-20 left-4 right-4 animate-fade-in-up">
-        <div class="glass-morphism bg-opacity-40 text-white transform transition-all duration-300">
-            <div class="flex justify-between items-start mb-2">
-                <h2 class="text-2xl font-extrabold tracking-tight drop-shadow-sm">{product.nombre}</h2>
-                <span class="text-xl font-bold text-white/90 drop-shadow-sm">
-                ${safePrice.toFixed(2)}
-                </span>
-            </div>
-            <p class="text-sm font-medium leading-relaxed text-white/80">
-                {product.categoria} - Ref: {product.codigo_oem}
-            </p>
+    <div class="absolute top-1 right-4 border-2 rounded-2xl p-1 w-20 h-fit 
+      bg-black/50 backdrop-blur-md flex items-center justify-center">
+        <span class="text-xl font-bold text-white/90 drop-shadow-sm">
+            ${safePrice.toFixed(2)}
+        </span>
+    </div>
+    <div class="absolute bottom-20 left-4 right-4 animate-fade-in-up bg-black/30">
+        <div class="glass-morphism text-white transform transition-all duration-300">
+            <article class="flex justify-between items-start mb-2">
+                <h2 class="md:text-2xl font-extrabold tracking-tight drop-shadow-sm">{product.nombre}</h2>
+            </article>
+            <article class="flex justify-between flex-wrap gap-2">
+                <p class="text-xs font-medium leading-relaxed text-white/80">
+                    {product.categoria} - Ref: {product.codigo_oem}
+                </p>
+                <p class="text-xs font-medium leading-relaxed text-white/80">
+                    Marca: {product.marca} - Modelo: {product.modelo}
+                </p>
+            </article>
+
+            
         </div>
     </div>
     <div class="absolute bottom-1 left-5 right-5 flex items-center justify-between mx-auto w-[90%]">
@@ -75,6 +85,7 @@ const waLink = `https://wa.me/?text=${waMessage}`;
         </button>
     </div>
 </section>
+
 
 <style>
     .glass-morphism{
